--- a/CBoatingMenuBar/Info.plist
+++ b/CBoatingMenuBar/Info.plist
@@ -27,7 +27,7 @@
 	<key>LSMinimumSystemVersion</key>
 	<string>$(MACOSX_DEPLOYMENT_TARGET)</string>
 	<key>NSHumanReadableCopyright</key>
-	<string>Copyright © 2016 Peter  Blanco. All rights reserved.</string>
+	<string>Copyright © 2016-2021 Peter  Blanco, Daniel Jalkut. All rights reserved.</string>
 	<key>NSMainNibFile</key>
 	<string>MainMenu</string>
 	<key>NSPrincipalClass</key>
